white space bug fixed

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -14,8 +14,7 @@
     padding: 0;
     cursor: pointer;
     opacity: 1;
-    transition: all .2s; 
-    padding: 0;
+    transition: all .2s;
 }
 
 .popup__close-button:hover {
